test/input/error/CannotAssign1.source
program CannotAssign1;
methods
sdohtem;
declare
int i = 1.2
eralced;
margorp;